--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <style>
+        #board {
+            border: 10px solid tan;
+            border-top-color: chocolate;
+            border-left-color: chocolate;
+            display: table;
+            padding: 5px;
+            background: beige;
+        }
         .pzl-row {
-            border: 1px solid red;
-            min-height: 30px;
-            display: flex;
+            /* border: 1px solid red; */
+            
+            padding: 0;
+            margin: 0;
+
         }
         .pzl-cel {
-            border: 1px solid blue;
+            border: 1px solid #333;
             height: 30px;
             width: 30px;
+            display: inline-block;
+            margin: 0 2px;
+            padding: 0 2px;
         }
         .fill {
             background-color: rgba(20,20,20, .5);
@@ -63,8 +76,7 @@
             <div class="row">
                 <div class="col">
                     <h2>Board</h2>
-                    <div id="board">
-                    </div>
+                    <div id="board"></div>
                 </div>
                 <div class="col">
                     <h2>Pieces</h2>
